--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -140,7 +140,7 @@
 		{% for entry in strandList %}
 			<tr class='ui-row {% if entry.internal == True %} ui-row-internal {% endif %}'>
 				<td class='userid b-r'> {{ entry.user.id }} </td>
-				<td class='name b-r'> {{ entry.user.display_name}}</td>
+				<td class='name b-r'> <a href='/strand/viz/neighbors?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
 				<td class='phoneid b-r' title='{{ entry.user.phone_number }}'> 
 
 					{% if entry.user.phone_number %}
@@ -158,7 +158,7 @@
 				<td class='twofish right percent b-r' title='{{ entry.twofishCount }}'> {{ entry.twofish }} </td>
 				<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
 				<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>
-				<td class='neighbor right b-r'> <a href='/strand/viz/neighbors?user_id={{ entry.user.id }}'>{{ entry.neighbor }}</a> </td>
+				<td class='neighbor right b-r'> {{ entry.neighbor }}</td>
 				<td class='notifications right b-r'> {{ entry.notifications }} </td>
 				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>				
 				<td class='location right b-r'> 
