adding _new target to summary page link

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -140,7 +140,7 @@
 		{% for entry in strandList %}
 			<tr class='ui-row {% if entry.internal == True %} ui-row-internal {% endif %}'>
 				<td class='userid b-r'> {{ entry.user.id }} </td>
-				<td class='name b-r'> <a href='/strand/viz/neighbors?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
+				<td class='name b-r'> <a target=_new href='/strand/viz/neighbors?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
 				<td class='phoneid b-r' title='{{ entry.user.phone_number }}'> 
 
 					{% if entry.user.phone_number %}
