--- a/strand/iOS/Strand/Strand/DFLocationRoadblockViewController.xib
+++ b/strand/iOS/Strand/Strand/DFLocationRoadblockViewController.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UIViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFLocationRoadblockViewController">
             <connections>
                 <outlet property="view" destination="iN0-l3-epB" id="STh-4Y-Xjj"/>
             </connections>
