updating summary page with actions

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -130,6 +130,7 @@
 				<td class='clustered b-r'> Clustered <br> (%)  </td>
 				<td class='db-fullimage b-r'> Fulls (%) </td>
 				<td class='neighbor b-r'> Neighbor <br> (%) </td>
+				<td class='actions b-r'> Actions </td>
 				<td class='notifications b-r'> Nots <br> sent </td>
 				<td class='last-not-timestamp b-r'> Last Not. <br> Timestamp </td>
 				<td class='location b-r'> Location </td>
@@ -159,6 +160,7 @@
 				<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
 				<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>
 				<td class='neighbor right b-r'> {{ entry.neighbor }}</td>
+				<td class='actions right b-r'> {{ entry.actions}}</td>
 				<td class='notifications right b-r'> {{ entry.notifications }} </td>
 				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>				
 				<td class='location right b-r'> 
