--- a/strand/iOS/Strand/Strand/DFFeedSectionHeaderView.xib
+++ b/strand/iOS/Strand/Strand/DFFeedSectionHeaderView.xib
@@ -7,40 +7,61 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DFFeedSectionHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dMB-6d-4Qm" userLabel="backgroundView">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dMB-6d-4Qm" userLabel="backgroundView">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoo-53-PLK">
+                            <rect key="frame" x="10" y="4" width="300" height="20"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mb-Xn-eUJ">
+                            <rect key="frame" x="27" y="24" width="283" height="20"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Md-XX-oaS">
+                            <rect key="frame" x="10" y="26" width="15" height="15"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="15" id="5f1-Ew-GTT"/>
+                                <constraint firstAttribute="width" constant="15" id="HHs-TM-He0"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
                     <color key="backgroundColor" white="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="8mb-Xn-eUJ" firstAttribute="leading" secondItem="4Md-XX-oaS" secondAttribute="trailing" constant="2" id="19g-Wd-MDZ"/>
+                        <constraint firstItem="eoo-53-PLK" firstAttribute="leading" secondItem="4Md-XX-oaS" secondAttribute="leading" id="2ar-r1-64f"/>
+                        <constraint firstAttribute="trailing" secondItem="eoo-53-PLK" secondAttribute="trailing" constant="10" id="MH8-2H-6iV"/>
+                        <constraint firstAttribute="trailing" secondItem="8mb-Xn-eUJ" secondAttribute="trailing" constant="10" id="OrB-E2-Oor"/>
+                        <constraint firstAttribute="bottom" secondItem="8mb-Xn-eUJ" secondAttribute="bottom" constant="4" id="Qeo-nF-xJl"/>
+                        <constraint firstItem="8mb-Xn-eUJ" firstAttribute="top" secondItem="eoo-53-PLK" secondAttribute="bottom" id="QqM-TJ-W5U"/>
+                        <constraint firstItem="8mb-Xn-eUJ" firstAttribute="centerY" secondItem="4Md-XX-oaS" secondAttribute="centerY" id="cdE-SP-KpG"/>
+                        <constraint firstItem="eoo-53-PLK" firstAttribute="leading" secondItem="dMB-6d-4Qm" secondAttribute="leading" constant="10" id="wBO-pf-8m7"/>
+                        <constraint firstItem="eoo-53-PLK" firstAttribute="top" secondItem="dMB-6d-4Qm" secondAttribute="top" constant="4" id="xCd-lz-eEa"/>
+                        <constraint firstItem="8mb-Xn-eUJ" firstAttribute="top" secondItem="eoo-53-PLK" secondAttribute="bottom" id="y80-ZC-p2k"/>
+                    </constraints>
                 </view>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoo-53-PLK">
-                    <rect key="frame" x="20" y="8" width="280" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mb-Xn-eUJ">
-                    <rect key="frame" x="20" y="32" width="280" height="18"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="eoo-53-PLK" secondAttribute="trailing" constant="20" id="0Xz-Zf-Lus"/>
-                <constraint firstItem="8mb-Xn-eUJ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="Igd-84-QpT"/>
-                <constraint firstAttribute="bottom" secondItem="8mb-Xn-eUJ" secondAttribute="bottom" constant="8" id="KqD-3N-aEX"/>
-                <constraint firstItem="eoo-53-PLK" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="Pby-Lg-h03"/>
-                <constraint firstItem="eoo-53-PLK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="lg9-O2-cE7"/>
-                <constraint firstAttribute="trailing" secondItem="8mb-Xn-eUJ" secondAttribute="trailing" constant="20" id="v4e-bo-76K"/>
+                <constraint firstAttribute="bottom" secondItem="dMB-6d-4Qm" secondAttribute="bottom" id="55m-EF-Jk5"/>
+                <constraint firstItem="dMB-6d-4Qm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="nVk-8U-i0e"/>
+                <constraint firstItem="dMB-6d-4Qm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vaO-dE-DZI"/>
+                <constraint firstAttribute="trailing" secondItem="dMB-6d-4Qm" secondAttribute="trailing" id="xNG-rF-V7C"/>
             </constraints>
             <connections>
                 <outlet property="backgroundView" destination="dMB-6d-4Qm" id="kdi-ne-8eU"/>
+                <outlet property="subtitleImageView" destination="4Md-XX-oaS" id="L59-Ax-c5e"/>
                 <outlet property="subtitleLabel" destination="8mb-Xn-eUJ" id="Rcj-Ho-nNH"/>
                 <outlet property="titleLabel" destination="eoo-53-PLK" id="2pb-D9-hVO"/>
             </connections>
