--- a/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6185.11" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6190.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,35 +14,35 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="538"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HE2-Vf-wok">
-                        <rect key="frame" x="20" y="14" width="280" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HE2-Vf-wok">
+                        <rect key="frame" x="10" y="13" width="300" height="16"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="favoritersList" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5m-xw-TWf" userLabel="favoritersList">
-                        <rect key="frame" x="20" y="458" width="280" height="17"/>
+                        <rect key="frame" x="10" y="420" width="300" height="17"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="17" id="3VC-kh-nlc"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <state key="normal" title="Button" image="Assets/Icons/LikersListIcon">
-                            <color key="titleColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EPr-aP-pSV">
-                        <rect key="frame" x="0.0" y="50" width="320" height="320"/>
+                        <rect key="frame" x="10" y="32" width="300" height="300"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="320" id="ikG-p7-8RR"/>
-                            <constraint firstAttribute="width" constant="320" id="t1L-J8-dky"/>
+                            <constraint firstAttribute="height" constant="300" id="ikG-p7-8RR"/>
+                            <constraint firstAttribute="width" constant="300" id="t1L-J8-dky"/>
                         </constraints>
                     </imageView>
                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="6Gw-h8-Can">
-                        <rect key="frame" x="150" y="201" width="20" height="20"/>
+                        <rect key="frame" x="8" y="-99" width="20" height="20"/>
                     </activityIndicatorView>
                     <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.80000000000000004" contentMode="scaleToFill" restorationIdentifier="collectionView" showsVerticalScrollIndicator="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="h07-n4-DgV">
-                        <rect key="frame" x="0.0" y="371" width="320" height="79"/>
+                        <rect key="frame" x="10" y="333" width="300" height="79"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="79" id="32E-5a-0uW"/>
                         </constraints>
@@ -55,7 +55,7 @@
                         <cells/>
                     </collectionView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U1S-w6-Jtc" userLabel="Actions bar">
-                        <rect key="frame" x="0.0" y="483" width="320" height="29"/>
+                        <rect key="frame" x="0.0" y="445" width="320" height="29"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="fST-z5-7nz" userLabel="favoriteButton" customClass="DFRoundedButton">
                                 <rect key="frame" x="8" y="0.0" width="111" height="29"/>
@@ -102,23 +102,23 @@
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="h07-n4-DgV" secondAttribute="trailing" id="07M-SB-Mi0"/>
+                    <constraint firstAttribute="trailing" secondItem="h07-n4-DgV" secondAttribute="trailing" constant="10" id="07M-SB-Mi0"/>
                     <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" priority="900" constant="8" id="BMx-TO-HYc"/>
                     <constraint firstAttribute="trailing" secondItem="U1S-w6-Jtc" secondAttribute="trailing" id="EAA-NR-agd"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" constant="1" id="Q48-yN-yzu"/>
                     <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="800" constant="8" id="S0e-fU-RBu"/>
-                    <constraint firstAttribute="trailing" secondItem="v5m-xw-TWf" secondAttribute="trailing" constant="20" id="U2a-H5-vDZ"/>
+                    <constraint firstAttribute="trailing" secondItem="v5m-xw-TWf" secondAttribute="trailing" constant="10" id="U2a-H5-vDZ"/>
                     <constraint firstAttribute="centerX" secondItem="EPr-aP-pSV" secondAttribute="centerX" id="UMD-W8-k6d"/>
-                    <constraint firstItem="h07-n4-DgV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="W57-RD-aTX"/>
-                    <constraint firstItem="v5m-xw-TWf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="emp-ho-p4y"/>
-                    <constraint firstItem="HE2-Vf-wok" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="g7V-DB-TlA"/>
+                    <constraint firstItem="h07-n4-DgV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="W57-RD-aTX"/>
+                    <constraint firstItem="v5m-xw-TWf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="emp-ho-p4y"/>
+                    <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="32" id="fDr-AQ-CiI"/>
+                    <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="HE2-Vf-wok" secondAttribute="bottom" constant="3" id="flS-ZR-bpc"/>
                     <constraint firstItem="v5m-xw-TWf" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" constant="8" id="kcq-eS-SKN"/>
-                    <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="HE2-Vf-wok" secondAttribute="bottom" constant="14" id="o13-HO-nG7"/>
-                    <constraint firstItem="HE2-Vf-wok" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="o22-Ns-exZ"/>
+                    <constraint firstItem="HE2-Vf-wok" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="o1z-cd-LaE"/>
                     <constraint firstItem="U1S-w6-Jtc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="qjF-xY-N9B"/>
                     <constraint firstItem="v5m-xw-TWf" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="900" constant="8" id="u3r-jO-EWn"/>
                     <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="v5m-xw-TWf" secondAttribute="bottom" constant="8" id="v2A-sz-rMw"/>
-                    <constraint firstAttribute="trailing" secondItem="HE2-Vf-wok" secondAttribute="trailing" constant="20" id="yXj-YJ-bq2"/>
+                    <constraint firstAttribute="trailing" secondItem="HE2-Vf-wok" secondAttribute="trailing" constant="10" id="yXj-YJ-bq2"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -137,12 +137,4 @@
         <image name="Assets/Icons/LikeOnButtonIcon" width="16" height="16"/>
         <image name="Assets/Icons/LikersListIcon" width="16" height="16"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4">
-            <size key="portraitSize" width="320" height="568"/>
-            <size key="landscapeSize" width="568" height="320"/>
-        </simulatedScreenMetrics>
-    </simulatedMetricsContainer>
 </document>
